proftpd-dfsg (1.3.3d-2) unstable; urgency=low

  * NOT YET RELEASED.
  * Added Vcs-* fields for the new pkg-proftpd alioth project.
  * Now using pkg-proftpd developers list as Maintainer field and
    added me as an Uploader.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Wed, 09 Feb 2011 15:02:07 +0100

proftpd-dfsg (1.3.3d-1) unstable; urgency=low

  * New upstream stable release with ABI bumping.
  * Moved to source format 3.0, with quilt.
  * Moved debian patches to quilt.
  * Policy bumped to 3.9.1.
  * Removed all patches merged upstream.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Tue, 08 Feb 2011 13:42:03 +0100

proftpd-dfsg (1.3.3a-6) unstable; urgency=high

  * [SECURITY] 3536.dpatch fixes insufficient bounds checking in sql_prepare_where() 
    function as found in mod_sql.c. 

 -- Francesco Paolo Lovergine <frankie@debian.org>  Fri, 28 Jan 2011 09:54:52 +0100

proftpd-dfsg (1.3.3a-5) unstable; urgency=high

  * [SECURITY,PATCH] 3521.dpatch fixes Telnet IAC processing stack overflow.
    This vulnerability allows remote attackers to execute arbitrary code on
    vulnerable installations of ProFTPD. Authentication is not required to
    exploit this vulnerability. It applies to >= 1.3.2rc3.
    (closes: #602279, #602288)

 -- Francesco Paolo Lovergine <frankie@debian.org>  Wed, 03 Nov 2010 10:51:05 +0100

proftpd-dfsg (1.3.3a-4) unstable; urgency=high

  * [SECURITY,PATCH] 3519.dpatch fixes Inappropriate directory traversal allowed by
    mod_site_misc. This vulnerability can be used to:
     - create a directory located outside the writable directory
     - delete a directory located outside the writable directory
     - create a symlink located outside the writable directory
     - change the time of a file located outside the writable directory.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Fri, 22 Oct 2010 11:59:54 +0200

proftpd-dfsg (1.3.3a-3) unstable; urgency=medium

  * Fixed 3492.dpatch to drop .rej file still around.
