@@ -3,8 +3,8 @@ ProFTPD source for Debian
 
 This source is created by pre-stripping RFC documents generally
 included in upstream tarballs. A good set of functional fixes
-taken from upstream CVS are also included by means of dpatch (see
-/usr/share/doc/dpatch/README.source.gz for details about the
+taken from upstream CVS are also included by means of quilt (see
+/usr/share/doc/quilt/README.gz for details about the
 program). Debian patches are named after the related bug ID on
 bugzilla.proftpd.org, in order to simplify checking of merged changes at
 every new upstream release: by comparing changelog.Debian and upstream
@@ -13,5 +13,5 @@ NEWS files superfluous patches are easily found.
 Note that since 1.3.2, upstream CVS has a proper stable branch which 
 should be followed instead of HEAD for useful fixes.
 
- -- Francesco Paolo Lovergine <frankie@debian.org>  Tue, 01 Sep 2009 22:45:56 +0200
+ -- Francesco Paolo Lovergine <frankie@debian.org>  Thu Feb 10 09:52:47 CET 2011
 
