@@ -20,10 +20,10 @@ Replaces: proftpd (<< 1.3.2)
 Provides: ftp-server, proftpd, proftpd-abi-1.3.3d
 Suggests: proftpd-doc, openssl, proftpd-mod-mysql, proftpd-mod-pgsql, proftpd-mod-ldap, proftpd-mod-odbc, proftpd-mod-sqlite, openbsd-inetd | inet-superserver
 Description: Versatile, virtual-hosting FTP daemon - binaries
- ProFTPd is a powerful replacement for wu-ftpd. This File Transfer Protocol
- daemon supports hidden directories, virtual hosts, and per-directory
- ".ftpaccess" files. It uses a single main configuration file, with a
- syntax similar to Apache.
+ ProFTPD is a powerful modular FTP/SFTP/FTPS server. This File Transfer
+ Protocol daemon supports also hidden directories, virtual hosts, and
+ per-directory ".ftpaccess" files. It uses a single main configuration
+ file, with a syntax similar to Apache.
  .
  Because of the advanced design, anonymous-FTP directories can have
  an arbitrary internal structure (bin, lib, etc, and special files are
@@ -39,10 +39,10 @@ Architecture: any
 Depends: proftpd-basic (=${binary:Version}), ${shlibs:Depends}, ${misc:Depends}, libtool
 Suggests: pkg-config
 Description: Versatile, virtual-hosting FTP daemon - development files
- ProFTPd is a powerful replacement for wu-ftpd. This File Transfer Protocol
- daemon supports hidden directories, virtual hosts, and per-directory
- ".ftpaccess" files. It uses a single main configuration file, with a
- syntax similar to Apache.
+ ProFTPD is a powerful modular FTP/SFTP/FTPS server. This File Transfer
+ Protocol daemon supports also hidden directories, virtual hosts, and
+ per-directory ".ftpaccess" files. It uses a single main configuration
+ file, with a syntax similar to Apache.
  .
  Because of the advanced design, anonymous-FTP directories can have
  an arbitrary internal structure (bin, lib, etc, and special files are
@@ -58,10 +58,10 @@ Suggests: proftpd-basic
 Section: doc
 Depends: ${misc:Depends}
 Description: Versatile, virtual-hosting FTP daemon - documentation
- ProFTPd is a powerful replacement for wu-ftpd. This File Transfer Protocol
- daemon supports hidden directories, virtual hosts, and per-directory
- ".ftpaccess" files. It uses a single main configuration file, with a
- syntax similar to Apache.
+ ProFTPD is a powerful modular FTP/SFTP/FTPS server. This File Transfer
+ Protocol daemon supports also hidden directories, virtual hosts, and
+ per-directory ".ftpaccess" files. It uses a single main configuration
+ file, with a syntax similar to Apache.
  .
  Because of the advanced design, anonymous-FTP directories can have
  an arbitrary internal structure (bin, lib, etc, and special files are
@@ -75,10 +75,10 @@ Package: proftpd-mod-mysql
 Architecture: any
 Depends: proftpd-basic (=${binary:Version}), ${misc:Depends}, ${shlibs:Depends}
 Description: Versatile, virtual-hosting FTP daemon - MySQL module
- ProFTPd is a powerful replacement for wu-ftpd. This File Transfer Protocol
- daemon supports hidden directories, virtual hosts, and per-directory
- ".ftpaccess" files. It uses a single main configuration file, with a
- syntax similar to Apache.
+ ProFTPD is a powerful modular FTP/SFTP/FTPS server. This File Transfer
+ Protocol daemon supports also hidden directories, virtual hosts, and
+ per-directory ".ftpaccess" files. It uses a single main configuration
+ file, with a syntax similar to Apache.
  .
  Because of the advanced design, anonymous-FTP directories can have
  an arbitrary internal structure (bin, lib, etc, and special files are
@@ -91,10 +91,10 @@ Package: proftpd-mod-pgsql
 Architecture: any
 Depends: proftpd-basic (=${binary:Version}), ${misc:Depends}, ${shlibs:Depends}
 Description: Versatile, virtual-hosting FTP daemon - PostgreSQL module
- ProFTPd is a powerful replacement for wu-ftpd. This File Transfer Protocol
- daemon supports hidden directories, virtual hosts, and per-directory
- ".ftpaccess" files. It uses a single main configuration file, with a
- syntax similar to Apache.
+ ProFTPD is a powerful modular FTP/SFTP/FTPS server. This File Transfer
+ Protocol daemon supports also hidden directories, virtual hosts, and
+ per-directory ".ftpaccess" files. It uses a single main configuration
+ file, with a syntax similar to Apache.
  .
  Because of the advanced design, anonymous-FTP directories can have
  an arbitrary internal structure (bin, lib, etc, and special files are
@@ -107,10 +107,10 @@ Package: proftpd-mod-ldap
 Architecture: any
 Depends: proftpd-basic (=${binary:Version}), ${misc:Depends}, ${shlibs:Depends}
 Description: Versatile, virtual-hosting FTP daemon - LDAP module
- ProFTPd is a powerful replacement for wu-ftpd. This File Transfer Protocol
- daemon supports hidden directories, virtual hosts, and per-directory
- ".ftpaccess" files. It uses a single main configuration file, with a
- syntax similar to Apache.
+ ProFTPD is a powerful modular FTP/SFTP/FTPS server. This File Transfer
+ Protocol daemon supports also hidden directories, virtual hosts, and
+ per-directory ".ftpaccess" files. It uses a single main configuration
+ file, with a syntax similar to Apache.
  .
  Because of the advanced design, anonymous-FTP directories can have
  an arbitrary internal structure (bin, lib, etc, and special files are
@@ -123,10 +123,10 @@ Package: proftpd-mod-odbc
 Architecture: any
 Depends: proftpd-basic (=${binary:Version}), ${misc:Depends}, ${shlibs:Depends}
 Description: Versatile, virtual-hosting FTP daemon - ODBC module
- ProFTPd is a powerful replacement for wu-ftpd. This File Transfer Protocol
- daemon supports hidden directories, virtual hosts, and per-directory
- ".ftpaccess" files. It uses a single main configuration file, with a
- syntax similar to Apache.
+ ProFTPD is a powerful modular FTP/SFTP/FTPS server. This File Transfer
+ Protocol daemon supports also hidden directories, virtual hosts, and
+ per-directory ".ftpaccess" files. It uses a single main configuration
+ file, with a syntax similar to Apache.
  .
  Because of the advanced design, anonymous-FTP directories can have
  an arbitrary internal structure (bin, lib, etc, and special files are
@@ -139,10 +139,10 @@ Package: proftpd-mod-sqlite
 Architecture: any
 Depends: proftpd-basic (=${binary:Version}), ${misc:Depends}, ${shlibs:Depends}
 Description: Versatile, virtual-hosting FTP daemon - SQLite3 module
- ProFTPd is a powerful replacement for wu-ftpd. This File Transfer Protocol
- daemon supports hidden directories, virtual hosts, and per-directory
- ".ftpaccess" files. It uses a single main configuration file, with a
- syntax similar to Apache.
+ ProFTPD is a powerful modular FTP/SFTP/FTPS server. This File Transfer
+ Protocol daemon supports also hidden directories, virtual hosts, and
+ per-directory ".ftpaccess" files. It uses a single main configuration
+ file, with a syntax similar to Apache.
  .
  Because of the advanced design, anonymous-FTP directories can have
  an arbitrary internal structure (bin, lib, etc, and special files are
