@@ -113,5 +113,5 @@ to be considered by both maintainer and upstreams. Also, do not presume soon to 
 found a bug, please think twice before reporting on the Debian BTS, thanks.
 
 If you were more inclined you can try to contact on-line the maintainer or the
-ProFTPd team in the #proftpd channel on irc.freenode.net.
+ProFTPD team in the #proftpd channel on irc.freenode.net.
 
