@@ -6,7 +6,7 @@
 action=$1
 version=$2
 
-db_title ProFTPd configuration
+db_title ProFTPD configuration
 
 db_input high shared/proftpd/inetd_or_standalone || true
 db_go
