@@ -12,12 +12,12 @@ Type: select
 __Choices: from inetd, standalone
 Default: standalone
 _Description: Run proftpd:
- ProFTPd can be run either as a service from inetd, or as a standalone
+ ProFTPD can be run either as a service from inetd, or as a standalone
  server. Each choice has its own benefits. With only a few FTP
- connections per day, it is probably better to run ProFTPd from inetd in
+ connections per day, it is probably better to run ProFTPD from inetd in
  order to save resources.
  .
  On the other hand, with higher traffic,
- ProFTPd should run as a standalone server to avoid spawning a new
+ ProFTPD should run as a standalone server to avoid spawning a new
  process for each incoming connection.
 
