@@ -4,8 +4,12 @@ proftpd-dfsg (1.3.3d-2) unstable; urgency=low
   * Added Vcs-* fields for the new pkg-proftpd alioth project.
   * Now using pkg-proftpd developers list as Maintainer field and
     added me as an Uploader.
+  * Updated README.source to reflect changes to maintainance.
+  * Changed long description in debian/control* to be more smart and up-to-date.
+  * Changed ProFTPd string occurrences in ProFTPD in all templates, as it is the 
+    official program name since a long time.
 
- -- Francesco Paolo Lovergine <frankie@debian.org>  Wed, 09 Feb 2011 15:02:07 +0100
+ -- Francesco Paolo Lovergine <frankie@debian.org>  Thu, 10 Feb 2011 10:06:55 +0100
 
 proftpd-dfsg (1.3.3d-1) unstable; urgency=low
 
